--- a/package.json
+++ b/package.json
@@ -23,19 +23,22 @@
 		"start": "npm run build -- -w",
 		"build": "tsc src/main.ts --outDir dist",
 		"test": "jest --transform={\\\"^.+\\\\.tsx?$\\\":\\\"ts-jest\\\"}",
+		"postinstall": "echo todo",
 		"pbjs": "pbjs",
 		"pbts": "pbts"
 	},
 	"dependencies": {
 		"commander": "^5.1.0",
 		"fs-extra": "^9.0.1",
-		"protobufjs": "6.8.4"
+		"lodash-es": "^4.17.15",
+		"protobufjs": "^6.9.0"
 	},
 	"devDependencies": {
 		"@commitlint/cli": "^9.0.1",
 		"@commitlint/config-conventional": "^9.0.1",
 		"@types/fs-extra": "^9.0.1",
 		"@types/jest": "^26.0.4",
+		"@types/lodash-es": "^4.17.3",
 		"@typescript-eslint/eslint-plugin": "^3.6.0",
 		"@typescript-eslint/parser": "^3.6.0",
 		"eslint": "^7.4.0",
