--- a/package.json
+++ b/package.json
@@ -30,15 +30,16 @@
 	"dependencies": {
 		"commander": "^5.1.0",
 		"fs-extra": "^9.0.1",
-		"lodash-es": "^4.17.15",
-		"protobufjs": "^6.9.0"
+		"lodash": "^4.17.15",
+		"protobufjs": "^6.9.0",
+		"uglify-js": "^3.7.7"
 	},
 	"devDependencies": {
 		"@commitlint/cli": "^9.0.1",
 		"@commitlint/config-conventional": "^9.0.1",
 		"@types/fs-extra": "^9.0.1",
 		"@types/jest": "^26.0.4",
-		"@types/lodash-es": "^4.17.3",
+		"@types/lodash": "^4.14.157",
 		"@typescript-eslint/eslint-plugin": "^3.6.0",
 		"@typescript-eslint/parser": "^3.6.0",
 		"eslint": "^7.4.0",
