chore: write some code

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "@porky-prince/protobuf",
-	"version": "0.0.0",
+	"version": "0.0.1",
 	"description": "Protocol buffers for H5 game",
 	"keywords": [
 		"protobuf",
@@ -11,9 +11,14 @@
 	],
 	"author": "PorkyKay",
 	"license": "MIT",
+	"main": "dist/main.js",
 	"bin": {
 		"porky-pb": "bin/cli.js"
 	},
+	"files": [
+		"bin",
+		"dist"
+	],
 	"scripts": {
 		"lint:prettier": "prettier \"{**/*,*}.{js,ts,json,md}\" -l",
 		"lint:code": "eslint --cache \"{**/*,*}.{js,ts}\"",
@@ -23,7 +28,7 @@
 		"start": "npm run build -- -w",
 		"build": "tsc src/main.ts --outDir dist",
 		"test": "jest --transform={\\\"^.+\\\\.tsx?$\\\":\\\"ts-jest\\\"}",
-		"postinstall": "echo todo",
+		"postinstall": "node bin/postinstall.js",
 		"pbjs": "pbjs",
 		"pbts": "pbts"
 	},
