--- a/package.json
+++ b/package.json
@@ -15,6 +15,9 @@
 		"access": "public"
 	},
 	"main": "dist/main.js",
+	"bin": {
+		"porky-pb": "bin/cli.js"
+	},
 	"files": [
 		"bin",
 		"dist"
@@ -28,9 +31,7 @@
 		"start": "npm run build -- -w",
 		"build": "tsc src/main.ts --outDir dist",
 		"test": "jest --transform={\\\"^.+\\\\.tsx?$\\\":\\\"ts-jest\\\"}",
-		"postinstall": "node bin/postinstall.js",
-		"pbjs": "pbjs",
-		"pbts": "pbts"
+		"postinstall": "node bin/postinstall.js"
 	},
 	"dependencies": {
 		"commander": "^5.1.0",
